BL-792 #resolve Support cfconfig and named loggers